Files/default-ui-layout.css
/* Variables */

:root {
    --n1: -0.0625rem;
    --n2: -0.125rem;
    --n3: -0.1875rem;
    --n4: -0.25rem;
    --n5: -0.3125rem;
    --n6: -0.375rem;
    --n7: -0.4375rem;
    --n8: -0.5rem;
    --n9: -0.5625rem;
    --n10: -0.625rem;
    --n11: -0.6875rem;
    --n12: -0.75rem;
    --n13: -0.8125rem;
    --n14: -0.875rem;
    --n15: -0.9375rem;
    --s1: 0.0625rem;
    --s2: 0.125rem;
    --s3: 0.1875rem;
    --s4: 0.25rem;
    --s5: 0.3125rem;
    --s6: 0.375rem;
    --s7: 0.4375rem;
    --s8: 0.5rem;
    --s9: 0.5625rem;
    --s10: 0.625rem;
    --s11: 0.6875rem;
    --s12: 0.75rem;
    --s13: 0.8125rem;
    --s14: 0.875rem;
    --s15: 0.9375rem;
}



/* Window size */

html {
    align-items: center;
}



/* Scrolling */

html {
    scroll-behavior: smooth;
}

@media (prefers-reduced-motion: reduce) {
    html { scroll-behavior: auto; }
}



/* Flex */

.wf-col, html, body, main, section, .wf-subsection, footer, aside, .wf-menu, .wf-dialog, .wf-button.wf-button-is-container, form:has(.wf-button-is-container), aside form, .wf-menu form, .wf-row-when-wide {
    display: flex;
    flex-direction: column;
}

.wf-row, .wf-content, nav, .wf-nav-island, .wf-checkbox {
    display: flex;
    flex-direction: row;
}

html, body, main, .wf-content, nav, .wf-nav-island {
    gap: var(--s8);
}

.wf-subsection, footer, aside, .wf-menu, .wf-dialog, .wf-row-when-wide {
    gap: var(--s10);
}

.wf-row, .wf-col, .wf-checkbox {
    gap: var(--s4);
}

.wf-button.wf-button-is-container {
    gap: var(--s2);
}

section {
    gap: calc(1rem + var(--s4));
}

section, .wf-subsection, footer, .wf-checkbox, .wf-dialog {
    align-items: start;
}

.wf-dyn-1, body, .wf-content, main, main > div {
    flex: 1 1 0;
}

.wf-dyn-2 {
    flex: 2 2 0;
}

.wf-dyn-3 {
    flex: 3 3 0;
}

.wf-dyn-4 {
    flex: 4 4 0;
}

.wf-dyn-5 {
    flex: 5 5 0;
}

.wf-grow-1 {
    flex: 1 0 auto;
}

.wf-grow-2 {
    flex: 2 0 auto;
}

.wf-grow-3 {
    flex: 3 0 auto;
}

.wf-grow-4 {
    flex: 4 0 auto;
}

.wf-grow-5 {
    flex: 5 0 auto;
}

aside, .wf-menu, .wf-dialog {
    flex-grow: 0.2;
    flex-shrink: 1;
    flex-basis: 0;
}

nav {
    justify-content: space-between;
}

nav, .wf-nav-island, nav .wf-button {
    flex-shrink: 0;
}

nav, .wf-nav-island {
    align-items: center;
}

aside {
    align-self: flex-start;
}

aside h3.wf-heading {
    align-self: start;
}

.wf-stretch, .wf-button.wf-button-is-container, form:has(.wf-button-is-container), aside .wf-button, .wf-menu .wf-button, aside form, .wf-menu form, .wf-textbox {
    align-self: stretch;
}

.wf-wrap {
    flex-wrap: wrap;
}



/* z-index */

h2.wf-heading {
    z-index: 2;
}

h1.wf-heading {
    z-index: 3;
}

.wf-top-cover {
    z-index: 4;
}

.wf-menu-background {
    z-index: 5;
}

aside, .wf-menu {
    z-index: 6;
}

.wf-dialog {
    z-index: 12;
}

nav {
    z-index: 10;
}

.wf-dialog-background {
    z-index: 11;
}

.wf-image.wf-fullscreen {
    z-index: 100;
}

.wf-loading-screen {
    z-index: 10000;
}



/* Display */

.wf-top-cover, .wf-button, .wf-menu-background, .wf-dialog-background {
    display: block;
}

body:not(:has(aside *:not(h2))) .wf-nav-menu-toggle {
    display: none;
}

li pre, li .wf-image {
    display: inline-block;
}



/* Position */

nav, h1.wf-heading, h2.wf-heading {
    position: sticky;
}

aside, .wf-top-cover, aside > .wf-heading, .wf-menu > .wf-heading, .wf-menu, .wf-dialog, .wf-dialog > h2.wf-heading, .wf-menu-background, .wf-dialog-background, .wf-image.wf-fullscreen, .wf-loading-screen, .wf-loading-container {
    position: fixed;
}

.wf-button, .wf-upload::file-selector-button, h3.wf-heading, .wf-checkbox input {
    position: relative;
}



/* Padding */

html, .wf-content, main, div, .wf-image.wf-fullscreen, .wf-checkbox span, .wf-checkbox input {
    padding: 0;
}

p {
    padding: 0 0 0 var(--s3);
}

body {
    padding: 0 var(--s8);
}

.wf-image {
    padding: var(--s6);
}

section {
    padding: 0 var(--s10) var(--s10) var(--s10);
}

footer {
    padding: var(--s10);
}

aside, .wf-menu, .wf-dialog {
    padding: calc(2rem + var(--s10)) var(--s10) var(--s10) var(--s10);
}

h1.wf-heading, h2.wf-heading {
    padding: 0 var(--s8);
}

.wf-button, .wf-upload::file-selector-button {
    padding: var(--s5) var(--s8)
}

select, .wf-textbox, .wf-checkbox, .wf-upload {
    padding: var(--s7) var(--s8) var(--s5) var(--s8)
}

ul, ol {
    padding: 0 0 0 var(--s3);
}

li > ul, li > ol {
    padding: 0 0 0 calc(1rem + var(--s4));
}

nav {
    padding: 0 var(--s3);
}

h3.wf-heading, pre {
    padding: var(--s2) var(--s6);
}



/* Margin */

html, .wf-content, p, nav, section, footer, div, ul, ol, pre, .wf-button, .wf-checkbox span, .wf-checkbox input, .wf-upload {
    margin: 0;
}

main {
    margin: var(--s8) 0;
}

body {
    margin: 0 auto;
}

h1.wf-heading + * {
    margin-top: var(--n10);
}

h1, h2 {
    margin: 0 0 0 var(--n10);
}

h3 {
    margin: 0;
}

code {
    margin: 0 var(--s4);
}

.wf-upload::file-selector-button {
    margin: 0 var(--s8) var(--s2) 0;
}

li pre, li .wf-image:not(.wf-fullscreen) {
    margin: var(--s2) 0 var(--s2) 0;
}



/* Font */

* {
    font-size: 1rem;
}

html {
    font-size: 16px;
}

h1, h1 * {
    font-size: calc(1rem + var(--s8));
    line-height: calc(2rem + var(--s4));
}

h2, h2 * {
    font-size: calc(1rem + var(--s4));
    line-height: 2rem;
}

h3, h3 * {
    font-size: calc(1rem + var(--s2));
}

.wf-upload::file-selector-button {
    line-height: calc(1rem + var(--s4));
}

.wf-button, p a, li a, .wf-button:active, p a:active, .wf-button:focus, p a:focus, .wf-button h3, .wf-upload::file-selector-button {
    text-decoration: none;
}

li {
    text-indent: calc(1rem + var(--s10)) hanging;
}

p {
    text-indent: var(--s8) hanging;
}

li pre {
    text-indent: 0;
}

.wf-button {
    text-align: start;
}



/* Overflow */

aside, .wf-menu, .wf-dialog {
    overflow: hidden auto;
}

pre {
    overflow: auto hidden;
}

html {
    overflow-x: hidden;
}

h1.wf-heading {
    overflow: hidden;
}

h1.wf-heading {
    text-overflow: ellipsis;
    text-wrap: nowrap;
}

.wf-button {
    text-wrap: wrap;
}



/* Size */

h1.wf-heading, h2.wf-heading {
    width: fit-content;
}

nav, .wf-nav-island {
    height: var(--nav-height);
}

nav .wf-button {
    box-sizing: content-box;
    height: calc(var(--nav-height) - 1rem);
}

.wf-top-cover {
    height: calc(var(--nav-height) + var(--s8));
}

aside, .wf-menu {
    box-sizing: border-box;
    width: min(calc(100% - 6rem), 15rem);
}

aside {
    height: calc(100dvh - 1rem - var(--s8) - var(--nav-height));
}

.wf-menu {
    max-height: calc(100dvh - 1rem - var(--s8) - var(--nav-height));
}

.wf-dialog {
    box-sizing: border-box;
    width: min(calc(100% - 3rem), 25rem);
    max-height: min(calc(100dvh - 3rem), 25rem);
}

html, .wf-subsection, .wf-image.wf-fullscreen, .wf-menu-background, .wf-dialog-background, .wf-loading-screen {
    width: 100%;
}

html, .wf-image.wf-fullscreen, .wf-menu-background, .wf-dialog-background, .wf-loading-screen {
    height: 100dvh;
}

aside, main {
    min-width: 0;
}

.wf-subsection > *, h1.wf-heading {
    max-width: 100%;
}

.wf-button.wf-button-is-container, form:has(.wf-button-is-container), .wf-textbox {
    max-width: 30rem;
}

li pre {
    max-width: calc(100% - 1rem - var(--s10));
}

li .wf-image:not(.wf-image.wf-fullscreen) {
    max-width: calc(100% - 2rem);
}

.wf-image.wf-fullscreen {
    max-width: unset !important;
}

.wf-subsection > * {
    box-sizing: border-box;
}

body {
    width: min(var(--max-width), calc(100% - 1rem));
}



/* Location */

nav {
    top: var(--s8);
}

.wf-dialog, .wf-dialog > h2.wf-heading {
    top: calc(50% - min(calc(100dvh - 3rem), 25rem) / 2);
}

.wf-dialog {
    left: calc(50% - min(calc(100% - 3rem), 25rem) / 2);
}

.wf-checkbox input {
    top: var(--s2);
}

h1.wf-heading, aside, aside > h2.wf-heading, .wf-menu, .wf-menu > h2.wf-heading, .wf-menu-background, .wf-dialog-background {
    top: calc(1rem + var(--nav-height));
}

section {
    scroll-margin-top: calc(1rem + var(--nav-height));
}

.wf-subsection > h2.wf-heading {
    top: calc(3rem + var(--s14) + var(--nav-height));
}

.wf-subsection {
    scroll-margin-top: calc(3rem + var(--s14) + var(--nav-height));
}

.wf-content h3.wf-heading {
    left: calc(-1 * var(--s4));
}

.wf-top-cover {
    top: 0;
    left: 0;
    right: 0;
}

.wf-image.wf-fullscreen, .wf-menu-background, .wf-dialog-background, .wf-loading-screen {
    left: 0;
    top: 0;
}



/* Shadows */

.wf-image.wf-fullscreen {
    box-shadow: none;
}



/* Lists */

ul, ol {
    list-style-position: inside;
}

ul > li::marker {
    font-size: 1.125rem;
}



/* Overlays */

.wf-menu {
    right: calc(50% - min(var(--max-width), (100% - 1rem)) / 2 - min(calc(100% - 6rem), 15rem) - var(--s8));
    opacity: 0;
    visibility: hidden;
    transition: opacity var(--overlay-time) ease-in-out,
    right var(--overlay-time) ease-in-out,
    visibility var(--overlay-time) linear;
}

.wf-menu.wf-is-open {
    right: calc(50% - min(var(--max-width), calc(100% - 1rem)) / 2);
    opacity: 1;
    visibility: visible;
    transition: opacity var(--overlay-time) ease-in-out,
    right var(--overlay-time) ease-in-out,
    visibility 0ms linear;
}

.wf-dialog, .wf-loading-screen {
    opacity: 0;
    visibility: hidden;
    transition: opacity var(--overlay-time) ease-in-out,
    visibility var(--overlay-time) linear;
}

.wf-dialog.wf-is-open, .wf-loading-screen.wf-is-open {
    opacity: 1;
    visibility: visible;
    transition: opacity var(--overlay-time) ease-in-out,
    visibility 0ms linear;
}

.wf-menu-background, .wf-dialog-background {
    opacity: 0;
    visibility: hidden;
    transition: opacity var(--overlay-time) ease-in-out,
    visibility var(--overlay-time) linear;
}

body:has(aside.wf-is-forced) .wf-menu-background, body:has(.wf-menu.wf-is-open) .wf-menu-background, body:has(.wf-dialog.wf-is-open) .wf-dialog-background {
    opacity: 1;
    visibility: visible;
    transition: opacity var(--overlay-time) ease-in-out,
    visibility 0ms linear;
}

@media (min-width: 0) {
    aside {
        opacity: 0;
        left: calc(50% - min(var(--max-width), (100% - 1rem)) / 2 - min(calc(100% - 6rem), 15rem) - 1rem);
        visibility: hidden;
        transition: opacity var(--overlay-time) ease-in-out,
        left var(--overlay-time) ease-in-out,
        visibility var(--overlay-time) linear;
    }

    aside.wf-is-forced {
        opacity: 1;
        left: var(--s8);
        visibility: visible;
        transition: opacity var(--overlay-time) ease-in-out,
        left var(--overlay-time) ease-in-out,
        visibility 0ms linear;
    }
}

@media (min-width: 50rem) {
    .wf-nav-menu-toggle {
        display: none !important;
    }

    aside {
        visibility: visible;
        position: sticky;
        left: unset;
        z-index: unset;
        opacity: unset;
        width: unset;
        display: flex;
        transition: none;
    }

    body:not(body:has(.wf-menu.wf-is-open, .wf-dialog.wf-is-open)) .wf-menu-background {
        visibility: hidden;
    }

    .wf-row-when-wide {
        flex-direction: row;
    }

    .wf-row-when-wide > * {
        flex: 1 1 0;
    }
}



/* Scrollbar */

::-webkit-scrollbar {
    width: var(--s11);
    height: var(--s11);
}

::-webkit-scrollbar-thumb {
    border: var(--s3) solid transparent;
    background-clip: content-box;

}



/* Other stuff */

.wf-button, select, .wf-upload {
    cursor: pointer;
}

.wf-button, select, .wf-textbox, .wf-upload, .wf-upload::file-selector-button {
    border: none;
    outline: none;
}

.wf-button, select, .wf-checkbox span {
    user-select: none;
}

.wf-textbox {
    resize: none;
}

.wf-image.wf-fullscreen {
    object-fit: contain;
}

li pre, li .wf-image {
    vertical-align: top;
}

